--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "natours",
+  "name": "alafnjuni",
   "version": "1.0.0",
-  "description": "Landing page for natours",
+  "description": "alfanjuni portofolio",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "watch:sass": "sass --watch sass/main.scss css/style.css",
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
-    
     "compile:sass": "node-sass sass/main.scss css/style.comp.css",
     "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
     "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.concat.css -o css/style.prefix.css",
@@ -19,8 +18,8 @@
   "devDependencies": {
     "autoprefixer": "^9.7.3",
     "concat": "^1.0.3",
-    "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3"
+    "postcss-cli": "^6.1.3",
+    "sass": "^1.79.4"
   }
 }
